# ml-project--mlflow-models-comp

./: .env.example  .gitignore  ARCHITECTURE.md  CHATBOT_README.md  Dockerfile.airflow  Enterprise_AIOps_ML_Design_Document.docx  IMPLEMENTATION_SUMMARY.md  Project_Architecture_Workflow_Analysis.docx  README.md  api_start.err  chatbot_ui_server.py  docker-compose.yml  examples_chatbot_usage.py  payload.json  post_predict.py  pyproject.toml  requirements.txt  run_api.py  run_chatbot_full.py  setup_chatbot.py  start_chatbot.py
artifacts/: finetune_predictions.jsonl
artifacts/arima/: predictions.csv
artifacts/gru/: predictions.csv
artifacts/model_comparison/: results.json
artifacts/sarima/: predictions.csv
artifacts/xgboost/: predictions.csv
dags/: train_and_compare_models.py
mlruns/: model_comparison.csv
mlruns/1/056293fad730493d9ec5fbfc64cb3b6a/artifacts/: predictions.csv
mlruns/1/08918d00c5cd4bcfb842698e98a1d7e7/artifacts/: predictions.csv
mlruns/1/186a2f6fd1b9448296a5b8e32bdab60b/artifacts/: predictions.csv
mlruns/1/583f026987824593ad3967c3b9f6806c/artifacts/: predictions.csv
scripts/: run_chatbot_local.py  run_chatbot_mini.py  run_rag_chatbot_local.py  test_rag.py
src/forecasting/: __init__.py  api.py  app.py  build_vector_store.py  chatbot.py  data.py  evaluation.py  features.py  forecast_service.py  generate_finetune_data.py  inspect_retrievals.py  mlflow_utils.py  model_comparison.py  models.py  predictions.py  rag.py  test_rag_query.py  training.py
src/forecasting/static/: chatbot_ui.html
src/streaming/: consumer.py  producer.py
(+11 files in other folders)
